--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.box{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap
+}
+.material-icons{
+  font-size: 2.4em;
+  cursor: pointer;
+}
+.card{
+  width: 300px;
+}
+.card .card-image .card-title{
+  color: black;
+  font-weight: 400
+}
+.cart{
+  margin-top:40px;
+}
+.collection .collection-item{
+  display: flex;
+}
+.collection-item.avatar .title {
+  font-size: 20px;
+  font-weight: 500;
+  color: #ee6e73;
+  display: block;
+  margin-bottom: 20px;
+  
+}
+.collection .collection-item img{
+  width: 150px;
+  margin-right: 25px;
+}
+.item-desc{
+  align-self:center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.grid {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 48em;
+  width: 90%;
+}
+
+.navigation a {
+  color: inherit;
+  display: block;
+  text-decoration: none;
+}
+
+.navigation .is-active {
+  background-color: #000;
+  color: #fff;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-radius: 999px;
+}
+
+.navigation__list {
+  list-style: none;
+  margin: -0.5em;
+  padding: 0;
+}
+
+.navigation__list--inline {
+  display: flex;
+}
+
+.navigation__item {
+  margin: 0.5em;
 }
